--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # 核心依赖
-streamlit==1.26.0       # Streamlit框架（必须）
-scikit-learn==1.3.2     # 模型训练（与你的模型版本匹配）
-pandas==2.1.0           # 数据处理
-numpy==1.26.0           # 数值计算
-joblib==1.3.2           # 模型持久化
-shap==0.44.1            # 模型解释
-matplotlib==3.8.0       # 绘图
+streamlit==1.26.0
+scikit-learn==1.3.2
+pandas==2.0.3
+numpy==1.24.4
+joblib==1.3.2
+shap==0.44.1
+matplotlib==3.7.2
 
-# 可选依赖（如果代码中使用）
-python-dateutil==2.8.2  # pandas依赖
+# 可选：指定 Pillow wheel（避免编译）
+pillow==9.5.0 --no-binary :all: --only-binary pillow
